<?xml version="1.0"?>
<package format="2">
  <name>ros_cc_cpp</name>
  <version>0.0.0</version>
  <description>A simple ROS package for code coverage tests. Developed in C++.</description>

  <maintainer email="rafael.arrais@gmail.com">Rafael Arrais</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/rarrais/ros_coverage</url>

  <author email="rafael.arrais@gmail.com">Rafael Arrais</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
